--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -14,6 +14,8 @@
     "vite": "^5.4.0"
   },
   "dependencies": {
-    "three": "^0.170.0"
+    "three": "^0.170.0",
+    "three-bvh-csg": "^0.0.17",
+    "three-mesh-bvh": "^0.9.8"
   }
 }
